# composable-parallel-scheduler-microbench

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  activate-conda.sh  another-run.sh  benchplot.ipynb  benchplot.py  benchplot.yml  choose-branches.sh  environment.yml  first-time-run.sh  run-me.sh  run_bench.sh  run_sched_dist.sh
bench_results/: bench_reduce.eps  bench_scan.eps  bench_spmv_balanced.eps  bench_spmv_hyperbolic.eps  bench_spmv_triangle.eps  results.md  scheduling_dist_EIGEN_SIMPLE_BARRIER.eps  scheduling_dist_EIGEN_SIMPLE_MULTITASK.eps  scheduling_dist_EIGEN_SIMPLE_SPIN.eps  scheduling_dist_EIGEN_STATIC_BARRIER.eps  scheduling_dist_EIGEN_STATIC_MULTITASK.eps  scheduling_dist_EIGEN_STATIC_SPIN.eps  scheduling_dist_EIGEN_TIMESPAN_BARRIER.eps  scheduling_dist_EIGEN_TIMESPAN_MULTITASK.eps  scheduling_dist_EIGEN_TIMESPAN_SPIN.eps  scheduling_dist_OMP_DYNAMIC_MONOTONIC_BARRIER.eps  scheduling_dist_OMP_DYNAMIC_MONOTONIC_MULTITASK.eps  scheduling_dist_OMP_DYNAMIC_MONOTONIC_SPIN.eps  scheduling_dist_OMP_DYNAMIC_NONMONOTONIC_BARRIER.eps  scheduling_dist_OMP_DYNAMIC_NONMONOTONIC_MULTITASK.eps  scheduling_dist_OMP_DYNAMIC_NONMONOTONIC_SPIN.eps  scheduling_dist_OMP_GUIDED_MONOTONIC_BARRIER.eps  scheduling_dist_OMP_GUIDED_MONOTONIC_MULTITASK.eps  scheduling_dist_OMP_GUIDED_MONOTONIC_SPIN.eps  scheduling_dist_OMP_GUIDED_NONMONOTONIC_BARRIER.eps  scheduling_dist_OMP_GUIDED_NONMONOTONIC_MULTITASK.eps  scheduling_dist_OMP_GUIDED_NONMONOTONIC_SPIN.eps  scheduling_dist_OMP_RUNTIME_MONOTONIC_BARRIER.eps  scheduling_dist_OMP_RUNTIME_MONOTONIC_MULTITASK.eps  scheduling_dist_OMP_RUNTIME_MONOTONIC_SPIN.eps  scheduling_dist_OMP_RUNTIME_NONMONOTONIC_BARRIER.eps  scheduling_dist_OMP_RUNTIME_NONMONOTONIC_MULTITASK.eps  scheduling_dist_OMP_RUNTIME_NONMONOTONIC_SPIN.eps  scheduling_dist_OMP_STATIC_BARRIER.eps  scheduling_dist_OMP_STATIC_MULTITASK.eps  scheduling_dist_OMP_STATIC_SPIN.eps  scheduling_dist_TBB_AFFINITY_BARRIER.eps  scheduling_dist_TBB_AFFINITY_MULTITASK.eps  scheduling_dist_TBB_AFFINITY_SPIN.eps  scheduling_dist_TBB_AUTO_BARRIER.eps  (+22 more)
benchmarks/: CMakeLists.txt  bench_mmul.cpp  bench_mtranspose.cpp  bench_noop.cpp  bench_reduce.cpp  bench_scan.cpp  bench_scheduling.cpp  bench_spin.cpp  bench_spmv_balanced.cpp  bench_spmv_hyperbolic.cpp  bench_spmv_triangle.cpp  bench_spmv_unbalanced.cpp  parallel_for.h  scan.h  spmv.cpp  spmv.h
benchmarks/tests/: CMakeLists.txt  scan_tests.cpp  spmv_tests.cpp
cmakelists-variations/: base.txt  lb4omp.txt  taskflow.txt
contrib/eigen/unsupported/Eigen/CXX11/src/ThreadPool/: EventCount.h  NonBlockingThreadPool.h
include/: eigen_pinner.h  eigen_pool.h  intrusive_ptr.h  modes.h  num_threads.h  parallel_for.h  poor_barrier.h  rapid_start.h  spin_lock.h  tbb_pinner.h  thread_index.h  thread_logger.h  time_logger.h  timespan_partitioner.h  trace.h  tracing.h  util.h
include/benchmarks/: scan.h  spmv.h
include/eigen/: max_size_vector.h  memory.h  mpmc_queue.h  nonblocking_thread_pool.h  run_queue.h  stl_thread_env.h
include/tests/: CMakeLists.txt  parallel_for_tests.cpp
notebooks/: scheduling.ipynb
scheduling_dist/: CMakeLists.txt  scheduling_dist.cpp
scheduling_time/: CMakeLists.txt  bench_scheduling.cpp
thesis/: bachelor-thesis.bib  bachelor-thesis.tex  itmo-student-thesis.cls
timespan_tuner/: CMakeLists.txt  tuner.cpp
trace_spin/: CMakeLists.txt  trace_spin.cpp
